--- a/index.html
+++ b/index.html
@@ -3,14 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Front-end development services: HTML, SCSS, responsive design. Building modern and user-friendly websites. Affordable prices and high-quality work.">
+    <title>Landing</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dist/index.css">
-    <link rel="icon" href="./assets/images/favicon.png" type="image/png">
-    <title>Landing</title>
+    <link rel="icon" href="./static/assets/favicon.png" type="image/png">
 </head>
 <body>
-    
+    <header class='header' aria-label='header'>
+        <div class="container">
+            <nav class="header__nav nav" aria-label='header navigation'>
+                <div class="nav__title">
+                    <a href="/" class="nav__title-link">Cloud <span>Flex</span></a>
+                </div>
+                <div class="nav__links">
+                    <ul class="nav__links-list list" aria-label='header navigation links'>
+                        <li class="list__item" aria-label='first link'>
+                            <a href="" class="list__item-link">about</a>
+                        </li>
+                        <li class="list__item" aria-label='second link'>
+                            <a href="" class="list__item-link">contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="nav__covid-wrapper covid">
+                    <a href="/" class="covid__link" aria-label="covid-19 update">Covid-19 update</a>
+                </div>
+                <div class="nav__globe-wrapper globe">
+                    <a href="/" class="globe__link" aria-label="globe info">
+                        <svg class="globe__link-icon aria-label='globe image">
+                            <use href="static/assets/sprites.svg#globe-icon"></use>
+                        </svg>
+                    </a>
+                </div>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
