--- a/index.html
+++ b/index.html
@@ -14,32 +14,98 @@
 <body>
     <header class='header' aria-label='header'>
         <div class="container">
-            <nav class="header__nav nav" aria-label='header navigation'>
-                <div class="nav__title">
-                    <a href="/" class="nav__title-link">Cloud <span>Flex</span></a>
-                </div>
-                <div class="nav__links">
-                    <ul class="nav__links-list list" aria-label='header navigation links'>
-                        <li class="list__item" aria-label='first link'>
-                            <a href="" class="list__item-link">about</a>
-                        </li>
-                        <li class="list__item" aria-label='second link'>
-                            <a href="" class="list__item-link">contact</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="nav__covid-wrapper covid">
-                    <a href="/" class="covid__link" aria-label="covid-19 update">Covid-19 update</a>
-                </div>
-                <div class="nav__globe-wrapper globe">
-                    <a href="/" class="globe__link" aria-label="globe info">
-                        <svg class="globe__link-icon aria-label='globe image">
-                            <use href="static/assets/sprites.svg#globe-icon"></use>
-                        </svg>
-                    </a>
-                </div>
-            </nav>
+            <div class="header__inner">
+                <nav class="header__nav nav" aria-label='header navigation'>
+                    <div class="nav__title">
+                        <a href="/" class="nav__title-link">Cloud <span>Flex</span></a>
+                    </div>
+                    <div class="nav__links">
+                        <ul class="nav__links-list list" aria-label='header navigation links'>
+                            <li class="list__item" aria-label='first link'>
+                                <a href="" class="list__item-link">about</a>
+                            </li>
+                            <li class="list__item" aria-label='second link'>
+                                <a href="" class="list__item-link">contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="nav__covid-wrapper covid">
+                        <a href="/" class="covid__link" aria-label="covid-19 update">Covid-19 update</a>
+                    </div>
+                    <div class="nav__globe-wrapper globe hidden-mobile">
+                        <a href="/" class="globe__link" aria-label="globe info">
+                            <svg class="globe__link-icon aria-label='globe image">
+                                <use href="static/assets/sprites.svg#globe-icon"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </nav>
+                <button
+                class="header__burger-button burger-button"
+                type="button"
+                onclick="mobileOverlay.showModal()">
+                <span class="visually-hidden">Open navigation menu</span>
+              </button>
+            </div>
         </div>
     </header>
+
+    <main aria-label="main content">
+        <section class="hero-section" aria-label="hero section">
+            <div class="container">
+                <div class="hero">
+                    <div class="hero__content">
+                        <h1 class="hero__title">When performance matters</h1>
+                        <button class="hero__action-button" type="button">Start development with us</button>
+                    </div>
+
+                    <div class="hero__notify">
+                        <img src="/static/assets/images/woman.png" 
+                        alt="woamn lying down" 
+                        class="hero__notify-image"
+                        width="220" height="180" loading="lazy"> 
+                        <div class="hero__notify-content">
+                            <p>WE USE COOKIES TO ENSURE YOUR BEST EXPERIENCE.
+                                THROUGH YOUR CONTINUED USE OF THIS SITE YOU ACCEPT THIS USE.
+                                FOR MORE INFORMATION, PLEASE SEE OUR PRIVACY POLICY.</p>
+                            </div>
+                        <button class="hero__notify-button">Accept</button>
+                    </div>
+
+                    <div class="hero__scroll">
+                        <span class="hero__scroll-content">
+                            Scroll down
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <dialog class="mobile-overlay" id="mobileOverlay">
+        <form class="mobile-overlay__close-button-wrapper" method="dialog">
+          <button class="mobile-overlay__close-button cross-button" type="submit">
+            <span class="visually-hidden">Close navigation menu</span>
+          </button>
+        </form>
+        <div class="mobile-overlay__body">
+          <ul class="mobile-overlay__list">
+            <li class="mobile-overlay__item">
+              <a href="/" class="mobile-overlay__link">About us</a>
+            </li>
+            <li class="mobile-overlay__item">
+              <a href="/" class="mobile-overlay__link">Services</a>
+            </li>
+            <li class="mobile-overlay__item">
+              <a href="/" class="mobile-overlay__link">Use cases</a>
+            </li>
+            <li class="mobile-overlay__item">
+              <a href="/" class="mobile-overlay__link">Pricing</a>
+            </li>
+            <li class="mobile-overlay__item">
+              <a href="/" class="mobile-overlay__link">Blog</a>
+            </li>
+          </ul>
+        </div>
+      </dialog>
 </body>
 </html>
