--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Front-end development services: HTML, SCSS, responsive design. Building modern and user-friendly websites. Affordable prices and high-quality work.">
+    <meta name="description"
+        content="Front-end development services: HTML, SCSS, responsive design. Building modern and user-friendly websites. Affordable prices and high-quality work.">
     <title>Landing</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +13,7 @@
     <link rel="stylesheet" href="./dist/index.css">
     <link rel="icon" href="./static/assets/favicon.png" type="image/png">
 </head>
+
 <body>
     <header class='header' aria-label='header'>
         <div class="container">
@@ -40,12 +43,9 @@
                         </a>
                     </div>
                 </nav>
-                <button
-                class="header__burger-button burger-button"
-                type="button"
-                onclick="mobileOverlay.showModal()">
-                <span class="visually-hidden">Open navigation menu</span>
-              </button>
+                <button class="header__burger-button burger-button" type="button" onclick="mobileOverlay.showModal()">
+                    <span class="visually-hidden">Open navigation menu</span>
+                </button>
             </div>
         </div>
     </header>
@@ -60,15 +60,13 @@
                     </div>
 
                     <div class="hero__notify">
-                        <img src="/static/assets/images/woman.png" 
-                        alt="woamn lying down" 
-                        class="hero__notify-image"
-                        width="220" height="180" loading="lazy"> 
+                        <img src="/static/assets/images/woman.png" alt="woamn lying down" class="hero__notify-image"
+                             loading="lazy">
                         <div class="hero__notify-content">
                             <p>WE USE COOKIES TO ENSURE YOUR BEST EXPERIENCE.
                                 THROUGH YOUR CONTINUED USE OF THIS SITE YOU ACCEPT THIS USE.
                                 FOR MORE INFORMATION, PLEASE SEE OUR PRIVACY POLICY.</p>
-                            </div>
+                        </div>
                         <button class="hero__notify-button">Accept</button>
                     </div>
 
@@ -80,32 +78,128 @@
                 </div>
             </div>
         </section>
+        <section class="work-section" id="work">
+            <div class="container">
+                <div class="work">
+                    <h2 class="work__title">How we work</h2>
+
+                    <div class="work__cards-wrapper">
+                        <figure class="info-card card--analysis" aria-label="card analysis">
+                            <div class="container-card bg-green-box">
+                                <svg class="info-card__icon icon--bulb" aria-label="bulb img">
+                                    <use href="static/assets/sprites.svg#bulb-icon"></use>
+                                </svg>
+                                <h3 class="info-card__title">Analysis</h3>
+                                <p class="info-card__desc">
+                                    Gathering client's ideas we are happy to help with a technical vision.
+                                </p>
+                            </div>
+                            <figcaption hidden></figcaption>
+                        </figure>
+
+                        <figure class="info-card card--design" aria-label="card design">
+                            <div class="container-card bg-blue-box">
+                                <svg class="info-card__icon icon--design" aria-label="design img">
+                                    <use href="static/assets/sprites.svg#design-icon"></use>
+                                </svg>
+                                <h3 class="info-card__title">Design</h3>
+                                <p class="info-card__desc">
+                                    In-depth analysis makes our solutions flexible, scalable and robust.
+                                </p>
+                            </div>
+
+                            <figcaption hidden></figcaption>
+                        </figure>
+
+                        <figure class="info-card card--dev" aria-label="dev card">
+                            <div class="container-card bg-yellow-box">
+                                <svg class="info-card__icon icon--dev" aria-label="dev img">
+                                    <use href="static/assets/sprites.svg#dev-icon"></use>
+                                </svg>
+                                <h3 class="info-card__title">Development</h3>
+                                <p class="info-card__desc">
+                                    Using best practices to make reliable, well-documented and easy to maintain system.
+                                </p>
+                            </div>
+
+                            <figcaption hidden></figcaption>
+                        </figure>
+
+                        <figure class="info-card card--maintenance" aria-label="maintenance card">
+                            <div class="container-card bg-green-box">
+                                <svg class="info-card__icon icon--maintenance" aria-label="maintenance img">
+                                    <use href="static/assets/sprites.svg#maintenance-icon"></use>
+                                </svg>
+                                <h3 class="info-card__title">Maintenance</h3>
+                                <p class="info-card__desc">
+                                    Using best practices to make reliable, well-documented and easy to maintain system.
+                                </p>
+                            </div>
+
+                            <figcaption hidden></figcaption>
+                        </figure>
+
+                        <figure class="info-card card--testing" aria-label="testing card">
+                            <div class="container-card bg-blue-box">
+                                <svg class="info-card__icon icon--testing" aria-label="testing img">
+                                    <use href="static/assets/sprites.svg#testing-icon"></use>
+                                </svg>
+                                <h3 class="info-card__title">Testing</h3>
+                                <p class="info-card__desc">
+                                    Providing best quality of things developed by us for customers.
+                                </p>
+                            </div>
+
+                            <figcaption hidden></figcaption>
+                        </figure>
+
+                        <figure class="info-card card--integration" aria-label="integration card">
+                            <div class="container-card bg-yellow-box">
+                                <svg class="info-card__icon icon--integration" aria-label="integration img">
+                                    <use href="static/assets/sprites.svg#integration-icon"></use>
+                                </svg>
+                                <h3 class="info-card__title">Integration</h3>
+                                <p class="info-card__desc">
+                                    Solutions that go with the times to improve businesses and give customers best
+                                    experience.
+                                </p>
+                            </div>
+
+                            <figcaption hidden></figcaption>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
     <dialog class="mobile-overlay" id="mobileOverlay">
         <form class="mobile-overlay__close-button-wrapper" method="dialog">
-          <button class="mobile-overlay__close-button cross-button" type="submit">
-            <span class="visually-hidden">Close navigation menu</span>
-          </button>
+            <button class="mobile-overlay__close-button cross-button" type="submit">
+                <span class="visually-hidden">Close navigation menu</span>
+            </button>
         </form>
         <div class="mobile-overlay__body">
-          <ul class="mobile-overlay__list">
-            <li class="mobile-overlay__item">
-              <a href="/" class="mobile-overlay__link">About us</a>
-            </li>
-            <li class="mobile-overlay__item">
-              <a href="/" class="mobile-overlay__link">Services</a>
-            </li>
-            <li class="mobile-overlay__item">
-              <a href="/" class="mobile-overlay__link">Use cases</a>
-            </li>
-            <li class="mobile-overlay__item">
-              <a href="/" class="mobile-overlay__link">Pricing</a>
-            </li>
-            <li class="mobile-overlay__item">
-              <a href="/" class="mobile-overlay__link">Blog</a>
-            </li>
-          </ul>
+            <ul class="mobile-overlay__list">
+                <li class="mobile-overlay__item">
+                    <a href="/" class="mobile-overlay__link">About us</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="/" class="mobile-overlay__link">Services</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="/" class="mobile-overlay__link">Use cases</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="/" class="mobile-overlay__link">Pricing</a>
+                </li>
+                <li class="mobile-overlay__item">
+                    <a href="/" class="mobile-overlay__link">Blog</a>
+                </li>
+            </ul>
         </div>
-      </dialog>
+    </dialog>
 </body>
+
 </html>
