changes in html path png woman et stylesheet

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="./styles/index.css">
     <link rel="icon" href="./static/assets/favicon.png" type="image/png">
 </head>
 
@@ -60,7 +60,7 @@
                     </div>
 
                     <div class="hero__notify">
-                        <img src="/static/assets/images/woman.png" alt="woamn lying down" class="hero__notify-image"
+                        <img src="./static/assets/images/woman.png" alt="woamn lying down" class="hero__notify-image"
                              loading="lazy">
                         <div class="hero__notify-content">
                             <p>WE USE COOKIES TO ENSURE YOUR BEST EXPERIENCE.
