section about implementation

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                     <div class="hero__notify">
                         <img src="./static/assets/images/woman.png" alt="woamn lying down" class="hero__notify-image"
-                             loading="lazy">
+                            loading="lazy">
                         <div class="hero__notify-content">
                             <p>WE USE COOKIES TO ENSURE YOUR BEST EXPERIENCE.
                                 THROUGH YOUR CONTINUED USE OF THIS SITE YOU ACCEPT THIS USE.
@@ -171,7 +171,45 @@
                 </div>
             </div>
         </section>
+        <section class="about-section" id="about">
+            <div class="container">
+                <div class="about">
+                    <div class="about__quality">
+                        <div class="about__quality-inner subsection">
+                            <h3 class="about__quality-title">High Quality</h3>
+                            <p class="about__quality-desc">
+                                We are the leading firm by delivering quality and value to our clients.
+                                All our professionals have huge experience of creating comfortable
+                                high-quality software. We like what we do.
+                            </p>
+                        </div>
+                    </div>
 
+
+                    <div class="about__touch">
+                        <div class="about__touch-inner subsection">
+                            <h3 class="about__touch-title">Always in touch</h3>
+                            <p class="about__touch-desc">
+                                We are always ready to answer your questions.
+                                <br>You can call us at the weekends and at night.
+                                <br>Also you can have a meeting for personal consultation.
+                            </p>
+                        </div>
+
+                    </div>
+
+                    <div class="about__approach">
+                        <div class="about__approach-inner subsection">
+                            <h3 class="about__approach-title">Individual Approach</h3>
+                            <p class="about__approach-desc">
+                                Our company works according to the principle of individual approach to every client.
+                                <br>This method lets us to get success in problems of all levels.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <dialog class="mobile-overlay" id="mobileOverlay">
